--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,3 +2,126 @@ html {
   background: green;
 }
 
+
+// Header Styling
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+
+  max-width: 85%;
+  margin-left: 8rem;
+  margin-top: 3rem;
+  
+}
+
+
+// Game Section Styling
+#game-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+
+  margin-top: 2rem;
+  margin-left: 8rem;
+  gap: 2rem;
+  max-width: 85%;
+  max-height: 250px;
+}
+
+
+// Card Section Styling
+
+
+.card {
+  width: 175px;
+  height: 200px;
+  position: relative;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  overflow: hidden;
+  cursor: pointer;
+  background-image: url('card-flip-card-image.png');
+  background-size: cover;
+
+  div {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    font-weight: bold;
+    border-radius: 8px;
+    transition: transform 0.6s ease-in-out;
+}
+
+.card-front {
+    background: white;
+    border: 2px solid black;
+    transform: rotateY(180deg); 
+}
+
+
+&.flipped .card-front {
+    transform: rotateY(0);
+}
+
+&.flipped .card-back {
+    transform: rotateY(180deg);
+}
+  
+}
+
+.card img {
+  src: url('card-flip-card-image.png');
+}
+
+
+// Button & Results styling 
+
+#bottom-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+
+  margin-top: 17rem;
+}
+
+#results {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  margin-bottom: 2rem;
+
+  color: white;
+}
+
+button {
+  display: block;
+  margin: 0 auto;
+  padding: 7px;
+  border: none;
+  font-size: 1.4rem;
+  color: white;
+  transition: 0.4s;
+
+
+  background-color: rgb(85, 144, 255);
+
+  &:hover {
+    font-size: 1.5rem;
+    box-shadow: 0px 3px 4px black;
+    transition: 0.3s;
+    background-color: rgb(52, 122, 251);
+
+  }
+}
